Fixed overflowing issues on tip bar

--- a/src/css/mainscreen/homescreen-styles.css
+++ b/src/css/mainscreen/homescreen-styles.css
@@ -119,6 +119,8 @@ h6{
     }
     .tipinput{
         width: 4rem;
+        height: 100%;
+        padding: 0;
     }
     
 }
