--- a/src/css/orderpad.css
+++ b/src/css/orderpad.css
@@ -155,7 +155,7 @@ h5{
     align-items: center;
     height: 4rem;
     position: absolute;
-    left: 1%;
+    left: 9%;
 }
 .tipinput{
     width: 5rem;
@@ -166,6 +166,8 @@ h5{
     border-bottom-right-radius: 0.5rem;
     border: transparent;
     padding-right: .5rem;
+    height: 100%;
+    padding: 0;
 }
 .tipinput:focus{
     outline: none;
@@ -179,7 +181,7 @@ h5{
     background: white;
     border-top-left-radius: .5rem;
     border-bottom-left-radius: .5rem;
-    height: 3.1rem;
+    height: 100%;
     font-size: 2em;
     font-weight: 500;
 }
@@ -348,6 +350,12 @@ h5{
     }
     .orderpadwrap{
         margin-right: 2rem;
+    }
+    .dollarsvg{
+        height: 100%;
+    }
+    .tipinput{
+        height: 100%;
     }
 }
 @media(max-width:474px) {
